--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <title>webrtc测试</title>
   </head>
   <body>
-    <input id="input" value="12" /><button id="send"">发送</button>
+    <div>
+      <input id="input" value="12" /><button id="send"">发送</button>
+    </div>
+    <div>
+      <input id="input-img" value="2.jpg" /><button id="request">请求</button><img id="img"/>
+    </div>
     <div id="console"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/javascripts/bus.js"></script>
@@ -15,21 +20,21 @@
     <script src="/javascripts/pc.js"></script>
     <script src="/javascripts/dom.js"></script>
     <script>
-      // window.addEventListener("load", function () {
-      //   if ("serviceWorker" in navigator) {
-      //     navigator.serviceWorker.register("/sw.js");
-      //     navigator.serviceWorker.addEventListener("message", function (event) {
-      //       console.log("收到消息sw->html", event.data);
-      //       if (event.data?.cmd == "request_source") {
-      //         // 发起远端请求
-      //         onSendP2PRequestSource(event.data);
-      //       } else if (event.data?.cmd == "response_source") {
-      //         // 本地sw检查cache返回
-      //         onSendP2PResponseSource(event.data);
-      //       }
-      //     });
-      //   }
-      // });
+      window.addEventListener("load", function () {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register("/sw.js");
+          navigator.serviceWorker.addEventListener("message", function (event) {
+            console.log("收到消息sw->html", event.data);
+            if (event.data?.cmd == "request_source") {
+              // 发起远端请求
+              onSendP2PRequestSource(event.data);
+            } else if (event.data?.cmd == "response_source") {
+              // 本地sw检查cache返回
+              onSendP2PResponseSource(event.data);
+            }
+          });
+        }
+      });
     </script>
   </body>
 </html>
