--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <body>
     <div>
       <button id="playvideo">开始视频</button>
-      <video id="local-video" autoplay muted playsinline />
       <div id="remote-videos"></div>
+      <video id="local-video" autoplay muted playsinline></video>
     </div>
     <div><input id="input" value="12" /><button id="send">发送</button></div>
     <div>
